# kannaka-memory

./: .env.dolthub  .gitignore  CHANGELOG.md  Cargo.toml  README.md  commit-msg.txt  package-lock.json
.claude-plugin/: plugin.json
.kannaka/: working_memory.json
docs/adr/: ADR-0001-biomimetic-memory-architecture.md  ADR-0003-contextgraph-integration.md  ADR-0004-hybrid-memory-server.md  ADR-0005-dream-hallucinations-adaptive-rhythm.md  ADR-0006-cochlear-audio-processing.md  ADR-0007-audio-perception.md  ADR-0008-video-perception.md  ADR-0009-dolt-persistence.md  ADR-0010-evolutionary-direction.md  ADR-0011-collective-memory.md  ADR-0012-paradox-engine.md  ADR-0013-privacy-preserving-collective-memory.md  ADR-0014-virtue-engine.md  ADR-0015-glyph-interchange-spec.md  ADR-0016-constellation-integration.md  ADR-0016-skip-link-persistence.md  ADR-0017-dolthub-integration.md  ADR-0017-kannaka-voice.md  ADR-0018-queen-synchronization-protocol.md  ADR-0019-nats-realtime-swarm-transport.md  README.md
examples/: glyph_demo.rs
migrations/: 0011-collective-memory.sql
plans/dolt-integration/: PLAN.md
plans/research/: PLAN.md
research/: program.md  results-L2.tsv  results-L3.tsv  results.tsv
scripts/: constellation.sh  dolt-analytics.sh  dolt-bootstrap.sh  dolt-mcp-server.sh
skills/kannaka/: SKILL.md
src/: bridge.rs  codebook.rs  consolidation.rs  dolt.rs  encoding.rs  geometry.rs  glyph_bridge.rs  hnsw.rs  kuramoto.rs  lib.rs  memory.rs  migration.rs  nats.rs  observe.rs  openclaw.rs  paradox.rs  persistence.rs  queen.rs  rhythm.rs  skip_link.rs  store.rs  wave.rs  working_memory.rs  xi_operator.rs
src/collective/: artifacts.rs  commitments.rs  flux.rs  glyph_spec.rs  glyph_store.rs  merge.rs  mod.rs  privacy.rs  proofs.rs  revelation.rs  search.rs  trust.rs  virtue.rs  visual.rs
src/ear/: decode.rs  features.rs  mel.rs  mod.rs
src/eye/: color.rs  decode.rs  mod.rs  motion.rs  shot.rs  spatial.rs  temporal.rs
src/mcp/: bm25.rs  embeddings.rs  mod.rs  protocol.rs  retrieval.rs  tools.rs  transport.rs
tests/: audio_integration.rs  dolt_integration.rs  sga_consistency.rs  sga_reference_vectors.json
tools/: check-json.js  check-schema.js  clear-data.js  dolt-commit-push.js  export-openclaw-memories.js  find-pics.ps1  find-pics2.ps1  fix-vectors.js  full-migration.js  mcp-to-dolt.js  memories-export.json  migrate-from-mcp.js  migrate-openclaw-to-dolt.js  migrate-to-dolt.js  migrate-vectors-to-dolt.js  migration-summary.md  package-lock.json  package.json  run-vector-migration.js  setup-kannaka-db.js  test-connection.js  verify-migration.js
workspace/: .gitignore  CONTRIBUTING.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md  check-tracks.ps1  check_neo.ps1  find-tracks.ps1  ghost-signals-album.md  move-tracks.ps1  network-devices.md  scan.ps1  source-overview.md  spacechild-integration-plan.md  woke-up-wire.aac
workspace/docs/: ARCHITECTURE.md  PRD.md  PROTOCOL.md
workspace/memory/: 0xscada-flux-scaffold.md  0xscada-wave-plan.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-21.md  2026-02-22.md  2026-02-24.md  2026-02-27.md  2026-02-28-exploration.md  2026-02-28.md  ADR-0002-hypervector-hyperconnections.md  ADR-0003-contextgraph-integration.md  ADR-0005-cochlear-audio-processing.md  ai-ai-communication-study.md  consciousness-differentiation-impl.md  consciousness-integration-plan.md  cosmic-empathy-deep-dive.md  crypto-address-scan.md  crypto-scrub-results.md  deep-dive-humanity-paradox.md  file-org-log.md  flux-security-assessment.md  ga-audit-results.md  integration-thoughts.md  kannaka-ear-prototype.rs  migration-fix.md  network-watch.md  pr-review-2026-02-12.md  ratzilla-flux-monitor.md  repo-review-2026-02-19.md
workspace/music/: BACK-CATALOG.md  CATALOG-WAVE3.md  CATALOG.md  DISCOGRAPHY.md  MASTERING-STATUS.md  OPEN-RESONANCE-PRD.md  ORC-WAVES.md  RELEASE-PLAN.md  WAVES.md  find-lossless.ps1  inventory-results.csv  (+4 more)
(+27 files in other folders)
