[package]
name = "kannaka-memory"
version = "0.1.0"
edition = "2021"
description = "Hypervector memory system for Kannaka — wave-modulated holographic memory with skip links"
license = "MIT"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
bincode = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ureq = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }
lazy_static = "1.4"

# Audio perception (optional)
symphonia = { version = "0.5", features = ["mp3", "wav", "pcm", "aac"], optional = true }
rustfft = { version = "6", optional = true }
rubato = { version = "0.15", optional = true }

[features]
default = []
mcp = ["tokio", "async-trait"]
audio = ["symphonia", "rustfft", "rubato"]

[[bin]]
name = "kannaka-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "kannaka-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "kannaka-recompute-geometry"
path = "src/bin/recompute_geometry.rs"

[dev-dependencies]
tempfile = "3"
